--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.16",
     "@mui/material": "^5.12.0",
     "@mui/styles": "^5.13.2",
+    "graphql": "^16.7.1",
     "icomoon-react": "^3.0.0",
     "next": "13.2.4",
     "nprogress": "^0.2.0",
