--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint:fix": "yarn run lint --fix",
     "ts-lint": "tsc --project tsconfig.json",
     "ts-lint:watch": "tsc --project tsconfig.json --watch",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "codegen:watch": "graphql-codegen --watch"
   },
   "dependencies": {
     "@apollo/client": "^3.7.16",
@@ -27,6 +28,8 @@
     "yup": "^1.0.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^4.0.1",
+    "@graphql-codegen/client-preset": "^4.0.1",
     "@types/node": "18.15.11",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.31",
@@ -41,7 +44,8 @@
     "jest": "29.5.0",
     "lint-staged": "^13.2.0",
     "prettier": "^2.3.2",
-    "typescript": "5.0.2"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3"
   },
   "lint-staged": {
     "*.(ts|tsx)": [
