--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.16",
-    "@mui/material": "^5.12.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.6",
     "@mui/styles": "^5.13.2",
     "graphql": "^16.7.1",
     "icomoon-react": "^3.0.0",
