--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@apollo/client": "^3.7.16",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.13.6",
     "@mui/styles": "^5.13.2",
     "graphql": "^16.7.1",
